--- a/uc_1_marimuthu_nagappan_iteration_1/pom.xml
+++ b/uc_1_marimuthu_nagappan_iteration_1/pom.xml
@@ -60,6 +60,26 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- provides springdoc-openapi-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		
+
 
 	</dependencies>
 
